# mdc_autogen

./: .gitignore  AUTHENTICATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_GUIDANCE.md  README.md  THEMATIC_RULES.md  generate_docs.py  generate_mdc_files.py  howto-cursorrules1.mdc  pyproject.toml  repo_analyzer.py  repository_structure.py
cursor-rules-current-en/: create-rules.mdc  knowldege-mdc-rules.md
cursor-rules-current-en/tools/rules_fitgap/: cursor_rules_fitgap.py  mapping.yaml
cursor_mdc_generator/: __init__.py  cli.py  cli_thematic.py  code_summarization.py  logging_utils.py  mdc_quality_analyzer.py  repo_analyzer.py  repository_structure.py  rule_authoring_spec.md  rule_id_allocator.py  rule_planner.py  symbolic_graph.py  visualize_dependency_graph.py
cursor_mdc_generator/data/: mapping.json  mapping.yaml
cursor_mdc_generator/llm_utils/: llm_client.py  model_lists.py  models.py  prompts.py  tokenize_utils.py
cursor_mdc_generator/llm_utils/auth/: FASTAPI_EXAMPLE.md  OIDC_EXAMPLE.md  README.md  SERVICE_ACCOUNT_EXAMPLE.md  __init__.py  env_key_provider.py  fastapi_key_provider.py  key_manager.py  key_provider.py  oidc_key_provider.py  service_account_key_provider.py
examples/: README.md  auth_example.py
examples/.cursor/rules/00-foundation/: 120-agent-exec-thematic.mdc
